# c-examples

./: memaddr1.c
1er Tercio/: ejemplo1_1_0_0.c  ejemplo2_1_0_0.c  ejemplo3_1_0_0.c  ejemplo3_1_1_0.c  ejemplo4_1_0_0.c  ejemplo4_2_0_0.c  ejemplo5_1_0_0.c  ejercicios.c
2do Tercio/: ejemplo6_1_0_0.c
2do Tercio/ejemplo10_0_0/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
2do Tercio/ejemplo10_0_0/include/: lib_ejemplo10.h
2do Tercio/ejemplo10_0_0/src/: imprimir10_0_0.c  main.c  operaciones10_0_0.c
2do Tercio/ejemplo9_0_0/: makefile
2do Tercio/ejemplo9_0_0/include/: ejemplo.h
2do Tercio/ejemplo9_0_0/src/: operaciones.c  principal.c
revisar/: memaddr1.c
